# mycobot_hardware

./: .gitignore  CMakeLists.txt  README.md  package.xml
install/: local_setup.sh  setup.sh
install/mycobot_hardware/share/mycobot_hardware/: package.bash  package.zsh
log/: latest_build
mycobot_gazebo/config/: mycobot_280_controllers.yaml
mycobot_gazebo/launch/: gazebo_standalone.launch.py  mycobot_280_arduino_bringup_classic_gazebo.launch.py  test_empty_with_control.launch.py
mycobot_gazebo/scripts/: example_joint_trajectory_publisher.py
mycobot_gazebo/urdf/: Kera_urdf.urdf.xacro
mycobot_gazebo/urdf/ros2_control/classic_gazebo/: gazebo_controllers.yaml  mycobot_280.urdf.xacro  mycobot_280_classic_gazebo.xacro  mycobot_280_gazebo_classic.urdf.xacro  mycobot_280_with_torque.urdf.xacro
mycobot_gazebo/urdf/ros2_control/gazebo/: mycobot_280.urdf
mycobot_hardware/: CMakeLists.txt  mycobot_hardware_plugin.xml
mycobot_hardware/config/: controllers.yaml
mycobot_hardware/include/mycobot_hardware/: mycobot_hardware.hpp
mycobot_hardware/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
mycobot_hardware/install/mycobot_hardware/share/mycobot_hardware/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
mycobot_hardware/launch/: bringup_test.launch.py
mycobot_hardware/log/: latest_build
mycobot_hardware/src/: mycobot_hardware.cpp
mycobot_hardware/test/: .TESTING.md.swp  TESTING.md  bringup_test.launch.py
mycobot_hardware/urdf/: mycobot_280_l2_test.urdf  ros2_control_snippet.ros2_control.xacro
src/: mycobot_hardware.cpp
test/: TESTING.md
urdf/: ros2_control_snippet.ros2_control.xacro
